<resources>
    <string name="app_name">BBITGA</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_signup">Signup</string>
    <string name="title_activity_home">Home</string>
    <string name="btnCreateAccount">Create Account</string>
    <string name="Firstname">Firstname</string>
    <string name="Lastname">Lastname</string>
    <string name="Emailadd">Email</string>
    <string name="signuppass">Password</string>
    <string name="Username">Username</string>
    <string name="Loginbtn">Log in</string>




    <string name="txtpassword">Le password</string>
</resources>
