<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/sixteen_dp"
    android:paddingLeft="@dimen/sixfour_dp"
    android:paddingRight="@dimen/sixfour_dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="strathmore.com.bbitga.LoginActivity"
    tools:showIn="@layout/activity_login">
<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/Username"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/signuppass"/>
    <Button
        android:layout_width="match_parent"
        android:text="@string/Loginbtn"
        android:layout_height="wrap_content"
        android:background="@color/Darkblue"
        android:onClick="navigatetohome"/>
    <Button
        android:layout_width="match_parent"
        android:text="@string/btnCreateAccount"
        android:layout_height="wrap_content"
        android:background="@color/Orange"
        android:onClick="createaccount"/>



</LinearLayout>

